# service-monad-haskell

./: .dir-locals.el  LICENSE  README.md  service-monad.cabal
src/Control/Monad/: Service.hs
test/: Main.hs
